<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>webdriver-unit-lib</groupId>
  <artifactId>webdriver-unit-lib</artifactId>
  <version>2.1.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>webdriver-unit-lib</name>
  
    <properties>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <maven.compile.encoding>UTF-8</maven.compile.encoding>
        
        <powermock.version>1.6.4</powermock.version>
        <log4j.version>2.5</log4j.version>
  </properties>
  
  
  <dependencies>
	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>6.9.10</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-java</artifactId>
		<version>2.52.0</version>
	</dependency>  
	<dependency>
    	<groupId>com.aventstack</groupId>
    	<artifactId>extentreports</artifactId>
    	<version>3.0.6</version>
</dependency>
	<dependency>
		<groupId>org.uncommons</groupId>
		<artifactId>reportng</artifactId>
		<version>1.1.4</version>
		<scope>test</scope>
		<exclusions>
			<exclusion>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
	<dependency>
		<groupId>com.google.inject</groupId>
		<artifactId>guice</artifactId>
		<version>3.0</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
    	<groupId>org.apache.maven.plugins</groupId>
    	<artifactId>maven-resources-plugin</artifactId>
    <version>2.6</version>
</dependency>
	
	
  </dependencies>
  
  
 <build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<outputEncoding>UTF-8</outputEncoding>
					<argLine> -Xms1024m -Xmx2048m -XX:MaxPermSize=256m
						-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>

			<!-- <plugin> <artifactId>maven-compiler-plugin</artifactId> <version>3.5.1</version> 
				<configuration> <encoding>UTF-8</encoding> <source>1.8</source> <target>1.8</target> 
				</configuration> </plugin> -->


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
  
  
</project>